--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,15 +7,32 @@ on:
 jobs:
   test:
     name: Test
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest]
+        vm:
+          - otp: 21.x
+            elixir: 1.7.0
+          - otp: 21.x
+            elixir: 1.8.0
+          - otp: 21.x
+            elixir: 1.9.0
+          - otp: 21.x
+            elixir: 1.10.0
+          - otp: 23.x
+            elixir: 1.11.0
+          - otp: 24.x
+            elixir: 1.12.1
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v1.0.0
+        uses: actions/checkout@v2
       - name: Setup Elixir
-        uses: actions/setup-elixir@v1.2.0
+        uses: erlef/setup-beam@v1
         with:
-          otp-version: 21.x
-          elixir-version: 1.9.1
+          otp-version: ${{ matrix.vm.otp }}
+          elixir-version: ${{ matrix.vm.elixir }}
       - name: Fetch dependencies
         run: mix deps.get
       - name: Run tests
